--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h2 >第二步激活邮箱填入钱包地址</h2>
 <br/>
 
-<h1 style="color:red">钱包地址生成链接:<a target="_blank" href="./获取地址.html">getAccountAddress.html</a> </h1>
+<h1 style="color:red">钱包地址生成链接:<a target="_blank" href="./getAddress.html">getAddress.html</a> </h1>
 
 <br/>
 <img src="./image/注册2.png" />
